Overview and website purposes changed

--- a/site-plan-rafting.html
+++ b/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>RickSaint Site Plan</h1>
+    <h1>White Water Rafting Site Plan</h1>
     <h2>Francy Malonga</h2>
     <h2>WDD 130-16</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>RickSaint is a web agency where you can order a web application depending on your needs. We create responsives websites for your business, desktop apps using web technologies, and progressive web app applications.</p>
+    <p>We help you discover the beauty of the rivers in the USA and we make you live an unforgettable moment in the magnificent waters of our beautifull country along with our amazing rafting team.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>This platform is open to any business man or woman who want to get a web app for his or her business</p>
+    <p>This platform is open to all people over the age of 18 who like to visit good places and want to discover the beauty of our rivers here in the USA.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="./images/logo.png" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
